# perplexity_clone

./: .gitignore  README.md  firebase.json  pubspec.yaml  start_dev.bat  start_dev.ps1  test_backend.py  test_firebase.dart  test_search.dart
lib/: firebase_options.dart  main.dart
lib/models/: chat_models.dart  chat_models.freezed.dart  chat_models.g.dart
lib/providers/: chat_provider.dart  chat_provider.g.dart  history_provider.dart  history_provider.g.dart
lib/screens/: chat_screen.dart  history_screen.dart  home_screen.dart
lib/services/: chat_history_service.dart  chat_web_service.dart  firebase_service.dart  local_storage_service.dart  websocket_service.dart
lib/theme/: app_colors.dart  app_theme.dart  web_safe_theme.dart
lib/utils/: font_helper.dart
lib/widgets/: answer_section.dart  connection_status.dart  debug_panel.dart  expandable_textfield.dart  firebase_status.dart  floating_chat_box.dart  search_bar_button.dart  search_section.dart  side_bar.dart  side_bar_button.dart  sources_section.dart
screenshots/: README.md
server/: config.py  main.py  pyproject.toml
server/.fleet/: settings.json
server/pydantic_models/: chat_body.py
server/services/: llm_service.py  search_service.py  sort_search_service.py
web/assets/: AssetManifest.json
