[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "google-genai>=1.26.0",
    "numpy>=2.3.1",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "tavily-python>=0.7.9",
    "trafilatura>=2.0.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
